gcc-14.2.0/gcc/testsuite/gdc.test/fail_compilation/b19730.d
version https://git-lfs.github.com/spec/v1
oid sha256:8fc8b145479e5f53b1e5a57b1591e2197d8b174a50cf65d33e6e83233a6ef3fd
size 252
